# sparse-merkle-tree

./: .gitignore  Cargo.toml
src/: blake2b.rs  ckb_smt.c  h256.rs  merge.rs  tree.rs
src/tests/: tree.rs
